# whisper.axcl

./: CMakeLists.txt  LICENSE  README.md  build.sh  build_aarch64.sh  cross_compile.sh  main.cpp
cmake/: 3rdparty.cmake  options.cmake
src/middleware/: axcl_native_runner.hpp  runner.hpp
